samples/_failures_safe/1761707786_b078c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d93d155e.c: In function ‘main’:
./samples/SAFE/__tmp_d93d155e.c:153:28: error: expected ‘)’ at end of input
  153 |     if (analyzer.count == 0
      |        ~                   ^
      |                            )
./samples/SAFE/__tmp_d93d155e.c:153:5: error: expected declaration or statement at end of input
  153 |     if (analyzer.count == 0
      |     ^~
